MilestoneRFA_CM01/src/objects/CM_GroupMember__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <formula>User__r.FirstName  &amp; &quot; &quot; &amp; User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserGroup__c</fullName>
        <label>UserGroup</label>
        <referenceTo>CM_UserGroup__c</referenceTo>
        <relationshipLabel>GroupMember</relationshipLabel>
        <relationshipName>GroupMember</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GroupMember_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eMail__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メールアドレス</label>
        <type>Text</type>
    </fields>
    <label>GroupMember</label>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>メンバー管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>